2023-1-3 집에서_공공데이터api 파싱

--- a/bookReview/public/popularBook.html
+++ b/bookReview/public/popularBook.html
@@ -13,27 +13,21 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
   <!-- Core theme CSS (includes Bootstrap)-->
   <link href="./stylesheets/index.css" rel="stylesheet" />
-  <style>
-    body {
-      width: 80%;
-      margin: auto;
-    }
-  </style>
 </head>
 
 <body>
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container px-4 px-lg-5">
-      <a class="navbar-brand" href="index.html">도서리뷰게시판</a>
+      <a class="navbar-brand" href="main.html">도서리뷰게시판</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
           class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-          <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#!">인기도서</a></li>
-          <li class="nav-item"><a class="nav-link" href="#!">도서 서평</a></li>
+          <li class="nav-item"><a class="nav-link active" aria-current="page" href="main.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="popularBook.html">인기도서</a></li>
+          <li class="nav-item"><a class="nav-link" href="review.html">도서 서평</a></li>
           <li class="nav-item"><a class="nav-link" href="#!">독서 챌린지</a></li>
         </ul>
         <form class="d-flex">
@@ -50,7 +44,7 @@
   <header class="bg-dark py-5">
     <div class="container px-4 px-lg-5 my-5">
       <div class="text-center text-white">
-        <h1 class="display-4 fw-bolder">이달의 인기도서</h1>
+        <h1 class="display-4 fw-bolder">베스트셀러</h1>
       </div>
     </div>
   </header>
