--- a/bookReview/public/main.html
+++ b/bookReview/public/main.html
@@ -13,33 +13,33 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="./stylesheets/index.css" rel="stylesheet" />
         <style>
-            body {
-            width: 80%;
-            margin: auto;
+            .flex_class {
+                display: flex;
+                width: 100%;
             }
+            .div_piece{
+                width: 30%;
+            }
+            .img_size{
+                width: 450px;
+                height: 300px;
+            }
+
+
         </style>
     </head>
     <body>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="index.html">도서리뷰게시판</a>
+                <a class="navbar-brand" href="main.html">도서리뷰게시판</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="main.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="popularBook.html">인기도서</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">도서 서평</a></li>
+                        <li class="nav-item"><a class="nav-link" href="review.html">도서 서평</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">독서 챌린지</a></li>
-                        <!-- <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">도서 서평</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#!">All Products</a></li>
-                                <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                                <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
-                            </ul>
-                        </li> --> <!--드랍다운-->
                     </ul>
                     <form class="d-flex">
                         <a href="./login.html">
@@ -57,7 +57,7 @@
         <header class="bg-dark py-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">이달의 인기도서</h1>
+                    <h1 class="display-4 fw-bolder">이달의 추천도서</h1>
                     <p class="lead fw-normal text-white-50 mb-0">popular book of the month</p>
                 </div>
             </div>
@@ -65,26 +65,7 @@
         <!-- Section-->
         <section class="py-5">
             <div class="container px-4 px-lg-5 mt-5">
-                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                    <div class="col mb-5">
-                        <div class="card h-100">
-                            <!-- Product image-->
-                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">Fancy Product</h5>
-                                    <!-- Product price-->
-                                    $40.00 - $80.00
-                                </div>
-                            </div>
-                            <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
-                            </div>
-                        </div>
-                    </div>
+                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center flex_class" id="popular_div">
                 </div>
             </div>
         </section>
@@ -95,6 +76,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="./javascripts/index.js"></script>
+        <script src="./javascripts/main.js"></script>
     </body>
 </html>
