--- a/bookReview/public/signUp.html
+++ b/bookReview/public/signUp.html
@@ -14,10 +14,6 @@
   <!-- Core theme CSS (includes Bootstrap)-->
   <link href="./stylesheets/form.css" rel="stylesheet" />
   <style>
-    body {
-      width: 80%;
-      margin: auto;
-    }
     #container{
       margin: 0 auto;
       text-align: center;
@@ -36,7 +32,7 @@
       margin-bottom: 10px;
     }
     fieldset li label{
-      width: 100px;
+      width: 150px;
       margin-right: 10px;
     }
     fieldset input{
@@ -47,6 +43,9 @@
       width: 200px;
       margin-bottom: 30px;
     }
+    span{
+      color: red;
+    }
   </style>
 </head>
 
@@ -55,15 +54,15 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="index.html">도서리뷰게시판</a>
+        <a class="navbar-brand" href="main.html">도서리뷰게시판</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
             class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-            <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link active" aria-current="page" href="main.html">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="popularBook.html">인기도서</a></li>
-            <li class="nav-item"><a class="nav-link" href="#!">도서 서평</a></li>
+            <li class="nav-item"><a class="nav-link" href="review.html">도서 서평</a></li>
             <li class="nav-item"><a class="nav-link" href="#!">독서챌린지</a></li>
           </ul>
         </div>
@@ -78,23 +77,22 @@
         <form action="#" method="POST">
           <fieldset>
             <ul>
-              <li><label>아이디</label><input type="text" id="sign_userId" name="sign_userId" placeholder="사용할 아이디를 입력하세요."></li>
-              <li><label>비밀번호</label><input type="password" id="sign_userPw" name="sign_userPw"
+              <li><label>아이디<span>*</span></label><input type="text" id="sign_userId" name="sign_userId" placeholder="사용할 아이디를 입력하세요."></li>
+              <li><label>비밀번호<span>*</span></label><input type="password" id="sign_userPw" name="sign_userPw"
                   placeholder="사용할 비밀번호를 입력하세요."></li>
-              <li><label>비밀번호확인</label><input type="password" id="sign_userPw_check" name="sign_userPw_check"
+              <li><label>비밀번호확인<span>*</span></label><input type="password" id="sign_userPw_check" name="sign_userPw_check"
                   placeholder="비밀번호를 다시한번 입력하세요."></li>
-              <!--<li><label>성별</label><input type="radio" id="man" name="gender"><span>남</span><input type="radio" id="female" name="gender"><span>여</span></li>-->
-              <li><label>닉네임</label><input type="text" id="sign_userNickName" name="sign_userNickName"
+              <li><label>닉네임<span>*</span></label><input type="text" id="sign_userNickName" name="sign_userNickName"
                   placeholder="사용할 닉네임을 입력하세요."></li>
-              <li><label>전화번호</label><input type="tel" id="sign_userPhone" name="sign_userPhone"
-                  placeholder="사용할 닉네임을 입력하세요."></li>
+              <li><label>전화번호<span>*</span></label><input type="tel" id="sign_userPhone" name="sign_userPhone"
+                  placeholder="전화번호를 입력하세요."></li>
               <li><label>이메일</label><input type="email" id="sign_userEmail" name="sign_userEmail" placeholder="이메일을 입력하세요.">
               </li>
               <li><label>주소</label><input type="text" id="sign_userAddress" name="sign_userAddress" placeholder="주소를 입력하세요.">
               </li>
             </ul>
-            <button button class="btn btn-outline-dark flex-shrink-0" type="button" id="btnSingCancle">취소</button>
-            <button button class="btn btn-outline-dark flex-shrink-0" type="submit" id="btnSignUp">가입</button>
+            <button class="btn btn-outline-dark flex-shrink-0" type="button" id="btnSingCancle">취소</button>
+            <button class="btn btn-outline-dark flex-shrink-0" type="button" id="btnSignUp">가입</button>
         </form>
         </fieldset>
   </section>
@@ -107,7 +105,7 @@
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Core theme JS-->
-  <script src="./javascripts/form.js"></script>
+  <script src="./javascripts/signUp.js"></script>
 </body>
 
 </html>
