--- a/bookReview/public/review.html
+++ b/bookReview/public/review.html
@@ -104,7 +104,16 @@
     </form>
   </section>
   <section>
-    <table id="table_list">
+    <table>
+      <thead>
+        <tr>
+          <th>No.</th>
+          <th>책제목</th>
+          <th>작성자</th>
+          <th>별점</th>
+        </tr>
+      </thead>
+      <tbody id="tbodyList"></tbody>
     </table>
   </section>
   <footer class="py-5 bg-dark">
