--- a/bookReview/public/login.html
+++ b/bookReview/public/login.html
@@ -52,15 +52,15 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="main.html">도서리뷰게시판</a>
+        <a class="navbar-brand" href="/main">도서리뷰게시판</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
             class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-            <li class="nav-item"><a class="nav-link active" aria-current="page" href="main.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link active" aria-current="page" href="/main">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="popularBook.html">인기도서</a></li>
-            <li class="nav-item"><a class="nav-link" href="#!">도서 서평</a></li>
+            <li class="nav-item"><a class="nav-link" href="/reviews">도서 서평</a></li>
             <li class="nav-item"><a class="nav-link" href="#!">독서챌린지</a></li>
           </ul>
         </div>
