--- a/bookReview/public/reviewInput.html
+++ b/bookReview/public/reviewInput.html
@@ -60,6 +60,9 @@
       text-align: center;
       padding: 5px;
     }
+    table th{
+      background-color: #e2e2e2;
+    }
 
     #btnSearch {
       padding: 0px;
@@ -116,7 +119,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
             <li class="nav-item"><a class="nav-link active" aria-current="page" href="/main">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="popularBook.html">인기도서</a></li>
+            <li class="nav-item"><a class="nav-link" href="/popular">인기도서</a></li>
             <li class="nav-item"><a class="nav-link" href="/reviews">도서 서평</a></li>
             <li class="nav-item"><a class="nav-link" href="#!">독서챌린지</a></li>
           </ul>
@@ -132,7 +135,7 @@
         <div class="flex_class">
           <div id="picture_div">
             <input onchange="readURL(this);" type="file" name="book_picture" id="book_picture">
-            <img id="preview" />
+            <img id="preview"/>
           </div>
             <table>
               <tr>
