--- a/bookReview/public/calendar.html
+++ b/bookReview/public/calendar.html
@@ -71,7 +71,7 @@
             console.log(obj);
           },
           select: function (arg) { // 캘린더에서 드래그로 이벤트를 생성할 수 있다.
-            var title = prompt('Event Title:');
+            var title = prompt('읽은 도서명을 입력하세요:');
             if (title) {
               calendar.addEvent({
                 title: title,
