2023-1-6 마지막 제출

--- a/bookReview/public/reviewInput.html
+++ b/bookReview/public/reviewInput.html
@@ -169,7 +169,7 @@
         </div>
         <textarea id="bookContent" name="content" cols="30" rows="10" placeholder="내용을 입력해주세요"></textarea>
         <button class="btn btn-outline-dark flex-shrink-0" type="button" id="cancel_review">취소</button>
-        <button class="btn btn-outline-dark flex-shrink-0" type="submit" id="post_review">등록</button><!--수정-->
+        <button class="btn btn-outline-dark flex-shrink-0" type="submit" id="post_review">등록
       </form>
   </section>
   <footer class="py-5 bg-dark">
@@ -181,7 +181,7 @@
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Core theme JS-->
-  <script src="./javascripts/client_reviewPost.js"></script>
+  <script src="/javascripts/client_reviewPost.js"></script>
 </body>
 
 </html>
